@@ -69,12 +69,18 @@ class JLanguageHelper
 
 				foreach($systemLangs as $systemLang => $metadata)
 				{
-					if (strtolower($browserLang) == strtolower(substr($metadata['tag'], 0, strlen($browserLang)))) {
-						return $systemLang;
-					}
-					else if ($primary_browserLang == substr($metadata['tag'], 0, 2)) {
-						$primaryDetectedLang = $systemLang;
-					}
+				// take off 3 letters iso code languages as they can't match browsers' languages and default them to en
+					$Jinstall_lang = $metadata['tag'];
+					
+					if (strlen($Jinstall_lang) < 6) 
+					{
+						if (strtolower($browserLang) == strtolower(substr($metadata['tag'], 0, strlen($browserLang)))) {
+							return $systemLang;
+						}
+						else if ($primary_browserLang == substr($metadata['tag'], 0, 2)) {
+							$primaryDetectedLang = $systemLang;
+						}
+					}	
 				}
 
 				if (isset($primaryDetectedLang)) {
